Ensure that contenteditable carets on macCatalyst are the right color, especially in Dark Mode https://bugs.webkit.org/show_bug.cgi?id=207789 <rdar://problem/59429715>

Reviewed by Tim Horton.

Source/WebCore:

Factor out caret color calculation to be used in WebPageIOS.

Fixes EditorStateTests.CaretColorInContentEditable.

* editing/FrameSelection.cpp:
(WebCore::CaretBase::computeCaretColor):
(WebCore::CaretBase::paintCaret const):
* editing/FrameSelection.h:

Source/WebKit:

Because UIKit only uses label color for the caret in macCatalyst,
we need skip text input traits and send the correctly calculated color
to UIKit.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView insertionPointColor]):
(-[WKContentView getInteractionTintColor]):
(-[WKContentView _updateInteractionTintColor]):
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::platformEditorState const):


Canonical link: https://commits.webkit.org/220917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256921 268f45cc-cd09-0410-ab3c-d52691b4dbfc